# rst-forensics

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
rst_forensics/: __init__.py  cli.py  flow.py  observation.py  scoring.py  verdict.py
rst_forensics/adapters/: __init__.py  _scapy.py  active.py  passive.py  pcap.py
tests/: test_cli.py  test_fixtures.py  test_flow.py  test_scoring.py  test_verdict.py
tests/fixtures/: build_fixtures.py
